# nanopage

./: .gitignore  Makefile  README.md  callgraph.sh  documentation.md  nanopage.cabal  stack.yaml
Demo/: Demo.cabal  LICENSE  Main.hs  Makefile  README.md  stack.yaml
Demo/content/pages/_admin/: config.yaml  page.md
Demo/content/pages/documentation/: config.yaml  page.md
Demo/content/pages/home/: page.md
Demo/content/static/: style.css
app/: Makefile  example_config.yaml  nanopage.cabal  stack.yaml
app/src/: CliOpts.hs  FileDB.hs  Main.hs  MkPartialsHs.hs  Nanopage.hs  Page.hs  Partials.hs  PartialsTH.hs  Sitemap.hs
app/src/Internal/: FileDB.hs  Helpers.hs  HtmlOps.hs  Partial.hs  SpockExt.hs
app/src/Partials/: AdminBlock.hs  KeywordList.hs  TagCloud.hs  TagList.hs
app/src/partials/: AdminBlock.hs  CategoryList.hs  TagCloud.hs  TagList.hs
content/: Makefile
content/pages/demo/: config.yaml  page.md
content/pages/documentation/: page.md
content/pages/home/: config.yaml  page.md
content/static/: style.css
content/static/assets/highlight/: highlight.pack.js
content/templates/: page.html
nanopage/: LICENSE  README.md  nanopage.cabal
nanopage/src/: Partials.hs  Sitemap.hs
nanopage/src/Internal/: EmbedDir.hs  Partial.hs
nanopage/src/Partials/: KeywordList.hs
src/: Config.hs  FileDB.hs  MkPartialsHs.hs  Nanopage.hs  Page.hs  Partial.hs
src/Internal/: EmbedDir.hs  FileDB.hs  Partial.hs
src/Partials/: AdminBlock.hs  CategoryList.hs  KeywordList.hs  TagCloud.hs  TagList.hs
