name:                Demo
version:             0.0.1.0
synopsis:            nanoPage demo app
description:         This is the nanoPage demo app. See http://nanopage.li.
homepage:            https://github.com/mayeranalytics/nanopage
license:             MIT
license-file:        LICENSE
author:              Markus Mayer
maintainer:          admin@mayeranalytics.com
copyright:           Mayer Analytics
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo-app
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nanopage
  default-language:    Haskell2010
