name:                nanopage
version:             0.1.0.0
synopsis:            nanoPage is a minimal flat file CMS based on the Spock framework.
-- description:
homepage:            https://github.com/githubuser/nanopage#readme
license:             MIT
license-file:        LICENSE
author:              Markus Mayer
maintainer:          mmayer@mayeranalytics.com
copyright:           Mayer Analytics
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable mkPartialsHs
    hs-source-dirs:    src
    main-is:           MkPartialsHs.hs
    default-language:  Haskell2010
    ghc-options:       -O2 -j -threaded
    build-depends:     base >= 4.7 && < 5
                     , text
                     , mime-types
                     , Spock
                     , slug
                     , bytestring
                     , network-uri
                     , pandoc
                     , hxt
                     , filepath
                     , blaze-html
                     , stache
                     , filemanip
                     , yaml
                     , file-embed
                     , aeson
                     , template-haskell
                     , directory
                     , time
                     , iso8601-time
    other-modules:     Nanopage
                     , Internal.FileDB
                     , Internal.Helpers
                     , Internal.HtmlOps
                     , Internal.Partial
                     , Internal.SpockExt


executable nanopage
    hs-source-dirs:    src, src/Partials
    main-is:           Main.hs
    default-language:  Haskell2010
    ghc-options:       -O2 -j -threaded
    build-depends:     base >= 4.7 && < 5
                     , Spock >= 0.12
                     , text
                     , bytestring
                     , blaze-html
                     , blaze-markup
                     , http-types
                     , network-uri
                     , mime-types
                     , wai-extra
                     , wai-middleware-static
                     , stache
                     , parsec
                     , aeson
                     , hxt
                     , yaml
                     , pandoc
                     , filepath
                     , filemanip
                     , slug
                     , file-embed
                     , containers
                     , time
                     , iso8601-time
                     , xml-conduit
                     , string-qq
                     , optparse-applicative
                     , directory
                     , open-browser
                     , template-haskell
                     , tostring
    other-modules:     Nanopage
                     , Config
                     , CliOpts
                     , Page
                     , FileDB
                     , Sitemap
                     , Partials.AdminBlock
                     , Partials.CategoryList
                     , Partials.KeywordList
                     , Partials.TagCloud
                     , Partials.TagList
                     , Internal.FileDB
                     , Internal.Helpers
                     , Internal.HtmlOps
                     , Internal.SpockExt
                     , Internal.Partial
                     , Partials
